no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.4.0 (current), 13.14.0 (current), 12.18.1 (active LTS), 10.21.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.5.0 (current), 13.14.0 (current), 12.18.2 (active LTS), 10.21.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -306,6 +306,19 @@ EVENTEMITTER[captureRejectionSymbol]         12*#Fired when an EVENTEMITTER hand
 
 EventEmitter.errorMonitor                    12*#Special 'EVENT' that behaves like 'error' except if no 'error' listener is
                                              12*#defined, an error is still thrown afterwards
+
+EventTarget                                  14*#Like DOM except:
+                                             14*#  - can be async
+                                             14*#  - no event nesting
+                                             14*#Notable differences between DOM EventTarget and Node.js EventEmitter:
+                                             14*#  - listeners can be either FUNC or { handleEvent() }
+                                             14*#  - cannot add same listener several times to same OBJ
+                                             14*#Not exposed globally
+NodeEventTarget                              14*#Child of EventTarget that mixes most Node.js EventEmitter properties|methods:
+                                             14*#  - only on|once|off|removeListener|removeAllListeners|listeners|listenerCount|eventNames|*etMaxListeners|defaultMaxListeners
+                                             14*#Not exposed globally
+Event                                        14*#Like DOM.
+                                             14*#Not exposed globally
 
 
                                              /=+===============================+=\
