no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1836,7 +1836,9 @@ lookup('HOST'[, OBJ], FUNC(ERROR, 'HOST', STR4))#DNS forward lookup.
 lookupService
 (IP, PORT, FUNC(ERROR, 'HOST', 'SCHEME'))       #
 
-new Resolver()                                  #RESOLVER
+new Resolver([OPTS])                            #RESOLVER
+                                             14*#OPTS:
+                                             14*#  - timeout NUM (-1 for def) (in ms)
                                                 #In following methods, if RESOLVER is missing, use builtin RESOLVER
 [RESOLVER.]resolve
  ('HOST'[, STR2], FUNC(ERROR, VAL_ARR))         #Same as lookup() but STR2 can any PTR record type: "A" (def), "AAAA", "MX", "TXT", "SRV", "PTR", "NS", "CNAME", "SOA", "NAPTR" or "ANY" (guesses)
@@ -1872,6 +1874,8 @@ version()->STR                               12*#OS version number more precise,
                                              12*#  - "Windows 10 Home" (Windows)
 arch()->STR                                     #"arm[64]", "ia32", "x32|x64", "mips[el]", "ppc[64]", "s390[x]"
 endianness()->STR                               #"BE" or "LE"
+
+NODE_SKIP_PLATFORM_CHECK=1                   14*#Unless set, Node.js fails to boot on old deprecated OS such as Windows 7
 
 uptime()->DOUBLE                                #In seconds
 loadavg()->DOUBLE_ARR                           #For last 1, 5 and 15 minutes.
@@ -2041,7 +2045,7 @@ WRENCH.chownSyncRecursive(DIR, UID, GID)       ##
                                                 #lchmod() is only on Mac
 WRENCH.chmodSyncRecursive(DIR, UINT)           ##
 
-[f]utimes(PATH|FD_INT, ATIME, MTIME, FUNC(ERR)) #Change atime|mtime
+[f|l]utimes(PATH|FD_INT, ATIME, MTIME, FUNC(ERR)) #Change atime|mtime
 access(PATH[, NUM], FUNC(ERROR))                #Checks if has permission, according to NUM or'd flags:
                                                 #  - FS.constants.F_OK (def, always implied):
                                                 #     - files exists and its directory list it
@@ -2872,6 +2876,7 @@ WORKER|MESSAGEPORT.postMessage                  #Like DOM except:
  (VAL[, VAL2_ARR])                              #  - child can only use MESSAGEPORT, not global "postMessage()"
                                                 #  - VAL2:
                                                 #     - can be SHARED_ARRBUFFER
+                                             14*#     - can be crypto KEY
                                                 #     - when MESSAGEPORT, VAL must be MESSAGEPORT
 WORKER|MESSAGEPORT.on('message', FUNC(VAL))     #Like DOM except:
                                                 #  - receive VAL directly, not MESSAGEEVENT
