no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2522,10 +2522,10 @@ on('unhandledRejection, FUNC(VAL, PROMISE))     #When PROMISE:
                                                 #  - is rejected
                                                 #  - and has no handler (PROMISE.catch())
 --unhandled-rejections=STR                      #What to do on 'unhandledRejection':
-                                                #  - 'strict': 'unhandledRejection' event + warning + uncaughtException
-                                                #  - default: (unless 'unhandledRejection' event handler) warning + (once) deprecation warning
-                                                #  - throw: (unless 'unhandledRejection' event handler) warning + uncaughtException
-                                                #  - warn-with-error-code: (unless 'unhandledRejection' event handler) warning + (once) deprecation warning
+                                                #  - 'strict': 'unhandledRejection' event + uncaughtException
+                                                #  - throw: 'unhandledRejection' event + (unless that event was handled) uncaughtException
+                                             14*#  - default: 'unhandledRejection' event + (unless that event was handled) warning + (once) deprecation warning
+                                             14*#  - warn-with-error-code: 'unhandledRejection' event + (unless that event was handled) warning + process.exitCode 1
                                                 #  - 'warn': warning
                                                 #  - 'none': nothing
 on('rejectionHandled, FUNC(PROMISE))            #When adding PROMISE.catch() on a PROMISE that:
