no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -394,8 +394,19 @@ TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression
                               (b)##  - no value|shorthand
                               (b)##  - kind 'init' -> 'method'
 
+#{VAR[: VAL], ...}                #Child of EXPR, type 'RecordExpression':
+#{[VAL]: VAL}                     #  - properties RECORD_PROPERTY|SPREAD_ELEMENT_ARR
+#{...OBJ}                         #Type 'RecordProperty':
+                                  #  - key EXPR (LITERAL if {[VAR]: VAL} or {NUM: VAL})
+                                  #  - value EXPR
+                                  #  - shorthand BOOL (if { VAR })
+                                  #  - computed BOOL
+
 [VAL...]                          #Child of EXPR, type 'ArrayExpression':
                                   #  - elements EXPR2|SPREAD_ELEMENT_ARR (null for sparse ARR elements)
+
+#[VAL...]                         #Child of EXPR, type 'TupleExpression':
+                                  #  - elements EXPR2|SPREAD_ELEMENT_ARR
 
 
                                              /=+===============================+=\
