no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.3.1
+VERSION ==>                       #7.4.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1088,6 +1088,7 @@ camelcase [OBJ]                   #VAR must be camelCase or CONSTANT_CASE
                                   #  - properties 'always' (def) or 'never'
                                   #  - ignoreDestructuring BOOL (def: false)
                                   #  - ignoreImports BOOL (def: false)
+                                  #  - ignoreGlobals BOOL (def: false)
                                   #  - allow 'VAR'_ARR
 id-match 'REGEXP' [OBJ]           #VAR names matching
                                   #Example: '^[a-z]+([A-Z][a-z]+)*$' for camelCase with only letters
@@ -1126,7 +1127,7 @@ unicorn/no-keyword-prefix [OBJ]  ##Prevent variables names that start with OBJ.b
                                  ##OBJ:
                                  ##  - onlyCamelcase BOOL (def: true)
                                  ##  - checkProperties BOOL (def: true)
-id-blacklist STR...               #Forbidden VAR names
+id-denylist STR...                #Forbidden VAR names
 
 new-cap [OBJ]                     #TYPE capitalization
                                   #OBJ:
@@ -1613,7 +1614,9 @@ no-misleading-character-class     #Avoid using S_CODEPOINT in . or [] without /R
 no-useless-backreference          #Avoid \NUM that matches nothing
 no-invalid-regexp [OBJ]           #Avoid invalid REGEXP
                                   #OBJ: allowConstructorFlags STR_ARR (allowed flags, def is all)
-prefer-regex-literals             #Avoid new RegExp('...') (but new RegExp(VAR) is ok)
+prefer-regex-literals [OBJ]       #Avoid new RegExp('...') (but new RegExp(VAR) is ok)
+                                  #OBJ:
+                                  #  - disallowRedundantWrapping BOOL (def: false): avoid new RegExp(REGEXP)
 
 require-unicode-regexp            #Must use /REGEXP/u
 prefer-named-capture-group        #Must use /(?<NAME>...)/ instead of /(...)/
