no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -5,41 +5,92 @@
 
 
 
+TODO:
+  - go through to_learn.txt
+
+VERSION ==>                       #1.14.4
+
+
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:           TEMPLATES           :==(
+                                            )==:             BUILD             :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
 
-import "text/template"            #Input is UTF-8 string + struct OBJ
-                                  #Is a string, which can contain {{...}} markers, which are substituted
-                                  #Can pipe with |
+go build FILE.go                  #Compile FILE.go to executable FILE
 
-{{VAL}}                           #STR, CHAR, BOOL, NUM, nil
-{{.}}                             #OBJ
-{{.VARR}}                         #OBJ.VARR
-{{$VAR[.VARR]}}                   #Uses variable
-{{.FUNC [...]}}                   #OBJ.FUNC(...)
-{{FUNC [...]}}                    #FUNC(...)
 
-{{/* COMMENT */}}                 #
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:           MULTIPLE            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
 
-{{- ...}}
-{{... -}}                         #Trim whitespaces on left|right of {{}}
 
-{{if BOOL}} ...
- [{{else [if BOOL]}} ...] {{end}} #
-{{range OBJ|ARR}} ...             #Iterates, changing current context OBJ
- [{{else}} ...] {{end}}           #Else is if no iteration
+VAL,...                           #Multiple values (MVAL)
+                                  #Similar to array, except must be stored in one variable each
 
-{{with OBJ}} ... [{{else}} ...] {{end}}     #Changes context
-                                  #Else is if OBJ is nothing
 
-{{define "TEMPLATE"}} ... {{end}} #Defines template
-{{template "TEMPLATE" [OBJ]}}     #Expands template (with OBJ set as context)
-{{block "TEMPLATE" OBJ}}...{{end}}#Same as:
-                                  #  {{define "TEMPLATE"}} ... {{end}}
-                                  #  {{template "TEMPLATE" [OBJ]}}
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            STRING             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
 
-{{... (VAL) ...}}                 #Go subexpression
+
+"..."                             #STR
+                                  #Can contain \n
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          ASSIGNMENT           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+VAR := VAL
+VAR,... := MVAL                   #Declare + assign
+
+VAR = VAL
+VAR,... = VAL                     #Assign (does not declare)
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:           FUNCTION            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+func FUNC([VAR [TYPE]],...)       #Declare a function
+ [TYPE2|([VAR2] [TYPE2],...)]     #TYPE|TYPE2 defaults to the next one
+ { ... }                          #TYPE2 is return type
+                                  #  - TYPE,... is when returning MVAL
+                                  #  - If VAR2 defined:
+                                  #     - declare the variable on top of function
+                                  #     - always return it
+
+return VAL|MVAL                   #
+
+FUNC([MVAL])                      #Call a function
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            MODULES            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+package MODULE                    #Entry point.
+                                  #Any global variable whose variable name starts with uppercase is exported
+package main                      #CLI entry point (as opposed to programmatic)
+                                  #Must have a main func
+
+import "[NAMESPACE/]MODULE"       #Import MODULE as a global variable named MODULE
+import (
+  "..."
+  ...
+)                                 #Same as several import "..."
