no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -6,9 +6,17 @@
 
 
 TODO:
-  - all go CMD
-  - all go* executable
+  - https://golang.org/ref/spec
+  - go back to https://golang.org/doc/effective_go.html#control-structures
+  - https://golang.org/ref/mem
+  - https://golang.org/doc/faq
+  - https://golang.org/doc/diagnostics.html
   - https://blog.golang.org
+  - https://github.com/golang/go/wiki
+  - https://golang.org/doc/cmd
+     - all go CMD
+     - all go* executable
+  - https://golang.org/pkg/
   - https://github.com/golang?type=source
   - go through to_learn.txt
 
